--- a/scss/components/_search.scss
+++ b/scss/components/_search.scss
@@ -1,12 +1,8 @@
 /* Search */
 
 .search-suggestion {
-  .search-item:last-child {
-    width: 234px;
-  }
-
-  .search-item:not(:last-child) {
-    margin-right: 4.5rem;
+  .search-item {
+    margin-right: 2.5rem;
     color: #707070;
     font-size: 16px;
     font-weight: 400;
